--- a/build
+++ b/build
@@ -1,10 +1,12 @@
 #!/bin/bash
 
-zpy src/desktop.z bin/desktop.py &&
-zpy src/android.z bin/android.py &&
+cp -vr src/img bin/ &&
+cp -vr src/plugin bin/ &&
 cp -v src/nullui.py bin/ &&
 cp -v src/mouse.py bin/ &&
 cp -v src/cmp.py bin/ &&
 cp -v src/specials.py bin/ &&
 cp -v src/cooltext.py bin/ &&
+zpy src/desktop.z bin/desktop.py &&
+zpy src/android.z bin/android.py &&
 cleanup
